--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -334,7 +334,7 @@
       <input type="text" style="color: white; cursor: pointer; font-size:15px;" placeholder="|" readonly>
     </div>
     <!-- date selection -->
-    <div data-step="3" data-intro="You can also filter by date. Selecting multiple dates will /"or/" the results." style="float:left; width:55px;">
+    <div data-step="3" data-intro="You can also filter by date. Selecting multiple dates will 'OR' the results." style="float:left; width:55px;">
       <div class="dropdown" style="float:left;">
         <input id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="text" class="form-control" placeholder="   Date" style="font-size: 15px; color: white; cursor: pointer;" readonly>
         <div id="dropdown-menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
