--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -310,7 +310,9 @@
 <body>
   
   <!-- THE MAP -->
-  <div id="map"></div>
+  <div data-step="6" data-intro="The map has building outlines that give more information when you hover over or click on them. 
+                                 The colors represent a heatmap of the campus, based on student enrollment in courses summed across
+                                 the entire week. It can be filtered by the time and date filters also." id="map"></div>
 
   <!-- Search bar overlay -->
   <div id="overlay" class="overlay">
@@ -409,9 +411,7 @@
 </div>
 
 <!--  Code for help overlay  -->
-<div data-step="6" data-intro="The map has building outlines that give more information when you hover over or click on them. 
-                                 The colors represent a heatmap of the campus, based on student enrollment in courses summed across
-                                 the entire week. It can be filtered by the time and date filters also." id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
+<div id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
   <h3>Help</h3>
   <img id="helpimage" src="{% static 'classes/images/helpoverlay.png'%}" style="width:490px;">
 </div>
