--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -397,7 +397,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a style="pointer-events: none;"> Welcome, {{netid}}</a>
   <a href="https://classmaps.herokuapp.com/about" target="_blank"><i class="fa fa-info-circle"></i> &nbsp&nbspAbout</a>
-  <a onclick="closeHelp(); introJs().start();"><i class="fa fa-question-circle"></i> &nbsp&nbspHelp</a>
+  <a onclick="closeNav(); introJs().start();"><i class="fa fa-question-circle"></i> &nbsp&nbspHelp</a>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank"><i class="fa fa-comment"></i> &nbspFeedback</a>
   <a href="https://classmaps.herokuapp.com/about/#team" target="_blank"><i class="fa fa-address-card"></i> &nbspContact</a>
   <a href="https://classmaps.herokuapp.com/accounts/logout"><i class="fa fa-sign-out"></i> &nbsp&nbspSign Out</a>
