--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -324,7 +324,7 @@
 <body>
   
   <!-- THE MAP -->
-  <div data-step="6" data-intro="The map has building outlines that give more information when you hover over or click on them. 
+  <div data-step="7" data-intro="The map has building outlines that give more information when you hover over or click on them. 
                                  The colors represent a heatmap of the campus, based on student enrollment in courses summed across
                                  the entire week. It can be filtered by the time and date filters also." id="map"></div>
 
@@ -423,7 +423,9 @@
       <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icons/24x24.png' %}"/> ClassMaps</p>
     </footer>
 </div>
-<div id="controlsContainer" class="controlsContainer" style="overflow: auto;">
+<div data-step="6" data-intro="The box over here houses the map controls. You can add on resource locations onto the map,
+                               and click on them for more information. You can also find your current location and
+                               reset the zoom." id="controlsContainer" class="controlsContainer" style="overflow: auto;">
   does this work
 </div>
 <!--  Code for help overlay  -->
