--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -151,17 +151,11 @@
     }
     /* control container to put an appropriate box during the tour guide */
     .controlsContainer {
-      position: fixed;
-      display: none;
-      width: 0;
+      position:absolute;
+      bottom:0;
+      right:0;
       height: 300px;
-      top: 0;
-      left: 0;
-      right: 1;
-      bottom: 1;
-      background-color: #d3d3d3;
-      z-index: 8;
-      cursor: pointer;
+      width: 100px;
     }
     /* sidebar css */
     .sideOverlay {
