--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -155,7 +155,8 @@
       bottom:0;
       right:0;
       height: 300px;
-      width: 100px;
+      width: 120px;
+      background-color: rgba(0,0,0,0);
     }
     /* sidebar css */
     .sideOverlay {
@@ -420,7 +421,6 @@
 <div data-step="6" data-intro="The box over here houses the map controls. You can add on resource locations onto the map,
                                and click on them for more information. You can also find your current location and
                                reset the zoom." id="controlsContainer" class="controlsContainer" style="overflow: auto;">
-  does this work
 </div>
 <!--  Code for help overlay  -->
 <div id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
