--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -151,6 +151,7 @@
     }
     /* control container to put an appropriate box during the tour guide */
     .controlsContainer {
+      z-index: 0;
       position:absolute;
       bottom:0;
       right:0;
