--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -308,7 +308,7 @@
 <body>
   
   <!-- THE MAP -->
-  <div data-step="6" data-intro="The map has building outlines that give more information when you hover over or click on them. 
+  <div data-step="6" data-intro="This is the map. You can drag and scroll to move around and zoom in. The map has building outlines that give more information when you hover over or click on them. 
                                  The colors represent a heatmap of the campus, based on student enrollment in courses summed across
                                  the entire week. It can be filtered by the time and date filters also." id="map"></div>
 
