tooltip not popup twice

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -669,7 +669,7 @@ $("#search").keypress(function(event) {
   // Put the locations for each resource to its corresponding layer
   for (var i = 0; i < printerLocs.length; i++) {
     temp = L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon});
-    temp.bindPopup(printerLocs[i][2]);
+    temp.bindTooltip(printerLocs[i][2]);
     temp.bindPopup(printerLocs[i][2]);
     temp.addTo(printers);}
   for (var i = 0; i < laundryLocs.length; i++) {
