--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -666,11 +666,16 @@ $("#search").keypress(function(event) {
      iconAnchor:   [18, 18], // point of the icon which will correspond to marker's location
      popupAnchor:  [0, -18] // point from which the popup should open relative to the iconAnchor
    });
+
+
   // Put the locations for each resource to its corresponding layer
-  for (var i = 0; i < printerLocs.length; i++) {
-    temp = L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon});
+  function loadPopups(temp, i){
     temp.bindTooltip(printerLocs[i][2]);
     temp.bindPopup(printerLocs[i][2]);
+  }
+  for (var i = 0; i < printerLocs.length; i++) {
+    temp = L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon});
+    temp.loadPopups(temp, i)
     temp.addTo(printers);}
   for (var i = 0; i < laundryLocs.length; i++) {
     L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);
