--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -667,31 +667,38 @@ $("#search").keypress(function(event) {
      popupAnchor:  [0, -18] // point from which the popup should open relative to the iconAnchor
    });
 
-
+   
   // Put the locations for each resource to its corresponding layer
-  function loadPopups(temp, i){
-    temp.bindTooltip(printerLocs[i][2]);
-    temp.bindPopup(printerLocs[i][2]);
-  }
   for (var i = 0; i < printerLocs.length; i++) {
     temp = L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon});
-    temp.loadPopups(temp, i)
+    temp.bindTooltip(printerLocs[i][2]);
+    temp.bindPopup(printerLocs[i][2]);
     temp.addTo(printers);}
   for (var i = 0; i < laundryLocs.length; i++) {
-    L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);
-    L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindTooltip(laundryLocs[i][2]).addTo(laundry);}
+    temp = L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon});
+    temp.bindPopup(laundryLocs[i][2]);
+    temp.bindTooltip(laundryLocs[i][2]);
+    temp.addTo(laundry);}
   for (var i = 0; i < hotspotLocs.length; i++) {
-    L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindPopup(hotspotLocs[i][2]).addTo(hotspots);
-    L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindTooltip(hotspotLocs[i][2]).addTo(hotspots)}
+    temp = L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon});
+    temp.bindPopup(hotspotLocs[i][2]);
+    temp.bindTooltip(hotspotLocs[i][2]);
+    temp.addTo(hotspots);}
   for (var i = 0; i < waterLocs.length; i++) {
-    L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindPopup(waterLocs[i][2]).addTo(waterspots);
-    L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindTooltip(waterLocs[i][2]).addTo(waterspots);}
+    temp = L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon});
+    temp.bindPopup(waterLocs[i][2]);
+    temp.bindTooltip(waterLocs[i][2]);
+    temp.addTo(waterspots);}
   for (var i = 0; i < kitchens.length; i++) {
-    L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);
-    L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindTooltip(kitchens[i][2]).addTo(kitchenspots);}
+    temp = L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon});
+    temp.bindPopup(kitchens[i][2]);
+    temp.bindTooltip(kitchens[i][2]);
+    temp.addTo(kitchenspots);}
   for (var i = 0; i < dining.length; i++) {
-    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
-    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindTooltip(dining[i][2]).addTo(diningspots);}
+    temp = L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon});
+    temp.bindPopup(dining[i][2]);
+    temp.bindTooltip(dining[i][2]);
+    temp.addTo(diningspots);}
   // URLs of different map layers and their attributions
   var mbAttr = 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
     '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
